<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wallpaper_chal_3"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#2196F3"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:text="@string/my_app_2"
        android:textColor="#FFFAFA"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="39dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtAddition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textAlignment="textEnd"
            android:textColor="#F44336"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtScoreNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#F44336" />

        <TextView
            android:id="@+id/txtLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/life"
            android:textAlignment="textEnd"
            android:textColor="#F44336"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtLifeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#F44336" />

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timer"
            android:textAlignment="textEnd"
            android:textColor="#F44336"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#F44336" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtAddition"
        android:layout_width="183dp"
        android:layout_height="83dp"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextWriteYourAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextWriteYourAnswer"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#0D0D0D"
        android:ems="10"
        android:hint="@string/write_your_answer"
        android:inputType="text"
        android:textColor="#F8F5F5"
        android:textColorHint="#979595"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="83dp"
        android:layout_marginBottom="372dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:text="@string/ok"
            tools:ignore="ButtonOrder,ButtonStyle,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnNextQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:text="@string/next_question"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>